[gd_scene load_steps=9 format=2]

[ext_resource path="res://juego/EstacionEspacial/Estacion.png" type="Texture" id=1]
[ext_resource path="res://juego/EstacionEspacial/AreaAtraccion.tscn" type="PackedScene" id=2]
[ext_resource path="res://juego/EstacionEspacial/EstacionRecarga.gd" type="Script" id=3]
[ext_resource path="res://juego/Explosiones/ExplosionSFX.ogg" type="AudioStream" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 29.5578
height = 208.458

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AreaColision/SpriteEstacion:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AreaRecarga/SpriteZonaRecarga:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AreaRecarga/SpriteZonaRecarga:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.729412 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AreaColision/SpriteEstacion:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("AreaColision:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath(".:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -20.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "activado"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AreaRecarga/SpriteZonaRecarga:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AreaColision:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2.5, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 20.0, 200.0, 380.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AreaRecarga/SpriteZonaRecarga:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 0.9, 1.4, 1.9, 2.4, 2.8, 3.3, 3.7, 4.2, 4.5, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.0352941 ), Color( 1, 1, 0.843137, 0.0745098 ), Color( 1, 1, 1, 0.0352941 ), Color( 1, 1, 0.843137, 0.0745098 ), Color( 1, 1, 1, 0.0352941 ), Color( 1, 1, 0.843137, 0.0745098 ), Color( 1, 1, 1, 0.0352941 ), Color( 1, 1, 0.843137, 0.0745098 ), Color( 1, 1, 1, 0.0352941 ), Color( 1, 1, 0.843137, 0.0745098 ), Color( 1, 1, 1, 0.0352941 ), Color( 1, 1, 0.843137, 0.0745098 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( -0.2 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -20.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "default"
length = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("AreaColision/SpriteEstacion:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="EstacionRecarga" type="Node2D"]
rotation = -0.349066
script = ExtResource( 3 )

[node name="AreaRecarga" parent="." instance=ExtResource( 2 )]

[node name="AreaColision" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaColision"]
shape = SubResource( 1 )

[node name="SpriteEstacion" type="Sprite" parent="AreaColision"]
position = Vector2( 1, 0.999999 )
scale = Vector2( 0.78343, 1.06163 )
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "activado"
anims/RESET = SubResource( 3 )
anims/activado = SubResource( 4 )
anims/default = SubResource( 5 )

[node name="CargarSFX" type="AudioStreamPlayer" parent="."]
bus = "DisparoSFX"

[node name="VacioSFX" type="AudioStreamPlayer" parent="."]
bus = "DisparoSFX"

[node name="ImpactoSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[connection signal="body_entered" from="AreaRecarga" to="." method="_on_AreaRecarga_body_entered"]
[connection signal="body_exited" from="AreaRecarga" to="." method="_on_AreaRecarga_body_exited"]
[connection signal="body_entered" from="AreaColision" to="." method="_on_AreaColision_body_entered"]
